test/integration/bad/new/fundef-bad6.stan
functions { void T ( array [] vector while);}
